# Multi-Paradigm-Programming-with-Modern-Cpp-Examples

./: CMakeLists.txt  constexpr_math.h  ctasks.h  executor.cpp  executor.h  executor_resumer.h  fp_math.h  main.cpp  task_name.cpp  task_name.h  tasks.cpp  tasks.h  tasks_concepts.h
